--- a/templates/movies_template.html
+++ b/templates/movies_template.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>My Movie App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
 </head>
 
 <body>
