tranfer to movies page in imdb

--- a/templates/movie_app.html
+++ b/templates/movie_app.html
@@ -11,7 +11,7 @@
     </div>
     <div>
         <ol class="movie-grid">
-            <li class="movie"><img src="https://m.media-amazon.com/images/M/MV5BNWEyOTlhNjMtZjNlMC00Y2QyLTljMjUtZjUzMzIyYTlmNjM1XkEyXkFqcGdeQXVyNjc5NjEzNA@@._V1_SX300.jpg" class="movie-poster" alt="The Hobbit Poster"/><div class="movie-title">The Hobbit</div><p class="movie-year">1977</p><p class="movie-rating">Rating: 6.7</p><p class="movie-notes">A good movie</p></li>
+            <li class="movie"><a href="https://www.imdb.com/title/" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BNWEyOTlhNjMtZjNlMC00Y2QyLTljMjUtZjUzMzIyYTlmNjM1XkEyXkFqcGdeQXVyNjc5NjEzNA@@._V1_SX300.jpg" class="movie-poster" alt="The Hobbit Poster"/></a><div class="movie-title">The Hobbit</div><p class="movie-year">1977</p><p class="movie-rating">Rating: 6.7</p><p class="movie-notes">A good movie</p></li><li class="movie"><a href="https://www.imdb.com/title/tt1201607" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMGVmMWNiMDktYjQ0Mi00MWIxLTk0N2UtN2ZlYTdkN2IzNDNlXkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_SX300.jpg" class="movie-poster" alt="Harry Potter and the Deathly Hallows: Part 2 Poster"/></a><div class="movie-title">Harry Potter and the Deathly Hallows: Part 2</div><p class="movie-year">2011</p><p class="movie-rating">Rating: 8.1</p><p class="movie-notes"></p></li>
         </ol>
     </div>
 </body>
