--- a/static/style.css
+++ b/static/style.css
@@ -12,19 +12,23 @@ body {
     font-size: 16pt;
 }
 
+.movie-grid-container {
+    padding: 20px;
+}
+
 .movie-grid {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    margin-top: 20px;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap; /* Enable wrapping of movie items */
+    justify-content: center; /* Center align the movies */
 }
 
 .movie-grid li {
     padding: 10px 15px;
     text-align: left;
-    position: relative;  /* Add this line to ensure absolute positioning works */
+    position: relative;  /* Ensure absolute positioning works */
 }
 
 .movie {
