--- a/templates/movies_template.html
+++ b/templates/movies_template.html
@@ -1,19 +1,18 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>My Movie App</title>
-    <link rel="stylesheet" href="../static/style.css" />
+    <meta charset="UTF-8">
+    <title>__TEMPLATE_TITLE__</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
-
 <body>
     <div class="list-movies-title">
         <h1>__TEMPLATE_TITLE__</h1>
     </div>
-    <div>
+    <div class="movie-grid-container">
         <ol class="movie-grid">
             __TEMPLATE_MOVIE_GRID__
         </ol>
     </div>
 </body>
-
 </html>
